WITI-608 Fix mega menu overflow

--- a/react/MegaMenu/styles.css
+++ b/react/MegaMenu/styles.css
@@ -1,8 +1,3 @@
-.menuContainer,
-.submenuContainer {
-  max-height: calc(75vh - 100px);
-}
-
 .menuContainerNav {
   box-shadow: 0 2px 24px 0 rgba(0, 0, 0, 0.13);
 }
